--- a/skins/standard/attachment.css
+++ b/skins/standard/attachment.css
@@ -73,9 +73,6 @@ table.file_table {
 
 tbody.file pre {
   display: inline;
-  white-space: pre-wrap; /* CSS 3 & CSS 2.1 */
-  white-space: -moz-pre-wrap; /* Gecko < 1.9.1 */
-  white-space: -o-pre-wrap; /* Opera 7 */
   font-size: 0.9em;
 }
 
